# UbuntuRep

./: README.md  README.md~  array1.sh  awkdemo.sh  cal.awk  evn.txt  f  hello.txt  log.txt  runsettings.runsettings  socre.txt  temptestfile  test1.sh  testfile
GTestDemo/Demo1/: Test.cpp  func.cpp  func.h
GTestDemo/nacytest/: TestCase.h  UnitTest.cpp  UnitTest.h  nacytest.h  test.cpp
GTestDemo/封装输出颜色/: SetColor.cpp  cout_c.h  printf_c.h
cmake1/: CMakeLists.txt  helloworld.cpp  luatest.lua
cmake2/DemoC11/: CMakeLists.txt  main  main.cpp
dlfcn/compile/: README.md  intops  main.cpp  main.i  malloc.h  mymalloc.cpp
dlfcn/link/: README.md  main  main.c  mymalloc.c
dlfcn/runtime/: intpos  main.cpp  mymalloc.cpp
gtest/: Gtest Study.md
ipc_file_dir/: README.md
ipc_file_dir/fifo_demo/: e_read_fifo  e_write_fifo  read_fifo.c  write_fifo.c
ipc_file_dir/msg_demo/: msg_client.c  msg_server.c
ipc_file_dir/pipe_demo/: demo  demo.c
ipc_file_dir/semaphore_demo/: README.md  sema_demo  sema_demo.c
ipc_file_dir/share_memory_demo/: mem_client  mem_client.c  mem_server  mem_server.c
kernel_file_dir/kernel_1/: README.md  mimi2440_led.c  mmap  mmap-app.c  testfile
kernel_file_dir/文件系统/: Makefile  README.md
markdown/: BinaryTreeTraversing.md  Iink.md  ThreadPool.md  类之间相互调用.md
module_file_dir/: README.md
shell_test/: hello.sh  login.sh  runapp.sh  shell_one.md  variable.sh
shelldir/: demo.cpp  head.cpp  head.h  test.sh
socket/: c  clientStruct.cpp  radar_server.cpp  radar_struct.h  rc  rs  s  serverStruct.cpp  targetTrace.h  test.cpp
(+37 files in other folders)
